artifacthub/library/pod-security-policy/fsgroup/1.1.0/samples/psp-fsgroup/update.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  operation: "UPDATE"
  object:
    apiVersion: v1
    kind: Pod
    metadata:
      name: fsgroup-disallowed
    spec:
      securityContext:
        fsGroup: 2000 # directory will have group ID 2000
      volumes:
      - name: fsgroup-demo-vol
        emptyDir: {}
      containers:
      - name: fsgroup-demo
        image: busybox
        command: [ "sh", "-c", "sleep 1h" ]
        volumeMounts:
        - name: fsgroup-demo-vol
          mountPath: /data/demo
