artifacthub/library/pod-security-policy/fsgroup/1.1.0/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: fsgroup
tests:
  - name: fsgroup
    template: template.yaml
    constraint: samples/psp-fsgroup/constraint.yaml
    cases:
      - name: example-disallowed
        object: samples/psp-fsgroup/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: example-allowed
        object: samples/psp-fsgroup/example_allowed.yaml
        assertions:
          - violations: no
      - name: example-allowed2-nofsgroup
        object: samples/psp-fsgroup/example_allowed2.yaml
        assertions:
          - violations: no
      - name: update
        object: samples/psp-fsgroup/update.yaml
        assertions:
          - violations: no
  - name: fsgroup2
    template: template.yaml
    constraint: samples/psp-fsgroup/constraint2.yaml
    cases:
      - name: example-allowed-is-disallowed-constraint2
        object: samples/psp-fsgroup/example_allowed2.yaml
        assertions:
          - violations: yes
  - name: fsgroup3
    template: template.yaml
    constraint: samples/psp-fsgroup/constraint3.yaml
    cases:
      - name: example-allowed-constraint3
        object: samples/psp-fsgroup/example_allowed2.yaml
        assertions:
          - violations: no
